fix row-gap in nav bar for iPhone

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,7 @@ nav {
   justify-content: space-around;
   flex-wrap: wrap;
   gap: 16px;
+  row-gap: 16px;
 }
 
 /* The ... */
